--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,11 @@ services:
       - backend
     volumes:
       - ./:/var/www/html
+    environment:
+      - DB_HOST=mysql
+      - DB_USER=demo
+      - DB_PASS=password
+      - DB_NAME=example
   
   apache:
     build: ./config/apache
